# wsqlite3

./: .gitignore  LICENSE  README.md  dev_cli.py  pyproject.toml  test.py  test_client_cli.py  test_server.py
docs/: index.html  md.css
src/wsqlite3/: __init__.py  __main__.py  service.py  verbose_service.py
src/wsqlite3/_cli/: __init__.py  argp.py  servreg.py
src/wsqlite3/_cli/logs/: __init__.py
src/wsqlite3/baseclient/: __init__.py  baseclient.py  orderutil.py
